--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
             <div class="projeto">
                 <a href="#" target="_blank">
-                    <img src="src/imagens/projeto-listagem-pokemon.png" alt="Projeto Listagem de pokemon" />
+                    <img src="/src/imagens/EM BREVE.png" alt="Capa do projeto">
                     <h3> Projeto 08 </h3>
 
                     <div class="informacoes-projeto">
@@ -205,3 +205,4 @@
 </body>
 
 </html>
+
